
2017-04-27 Ron Norman <rjn@inglenet.com>
	* move.c: added 'cob_alloc_move' used to copy data for BY VALUE params
	* common.c,common.h: added 'cob_get_hase_name' used to create has value
	  added 'cob_alloc_attr' to create working 'cob_field_attr'
	* call.c: set 'cobglobptr->cob_call_from_c' &
	  'cobglobptr->cob_call_name_hash' as required

2017-04-19 Ron Norman <rjn@inglenet.com>

	* fileio.c: 
	 For the MF EXTFH interface, set f->file_version = COB_FILE_VERSION

2017-04-19 Ron Norman <rjn@inglenet.com>

	* fileio.c: 
	 For BDB, check that the size of a record read is not larger than
	 what the FD has defined and return status 43 to the READ.
	 For BDB, on OPEN, read the first record in the file and if its
	 size is larger than the FD has defined then return status 39

2017-04-18 Ron Norman <rjn@inglenet.com>

	* numeric.c,common.c: 
	 Check for HAVE_ISFINITE and use 'isfinite' istead of 'finite'
	 'isfinite' is in the C99 standard and on MAC OS 'finite' is deprecated

2017-04-18 Ron Norman <rjn@inglenet.com>

	* fileio.c: relative_read_size returns an 'int' and not 'size_t'
	* screenio.c: add (int) casts
	* move.c: use 'int' instead of 'size_t' as it needs to be signed


2017-04-12 Ron Norman <rjn@inglenet.com>

	* fileio.c,common.c: 
	 Routines which implement functions defined via 'system.def'
	 have been enhanced to use the C API functions to access
	 parameter fields passed on the CALL statement in the COBOL
	 application code.

2017-04-10 Ron Norman <rjn@inglenet.com>

	* move.c,call.c,common.h: 
	  Changed 'len' variables from 'int' to 'size_t' in
	  cob_get_picx, cob_put_picx, cob_get_picx_param, 
	  cob_get_grp_param, cob_put_grp_param

2017-04-07  Ron Norman <rjn@inglenet.com>
	* common.c,coblocal.h,runtime.cfg:
	  Added COB_MF_LS_NULLS,COB_MF_LS_VALIDATE,COB_SHARE_MODE
	  & COB_RETRY_MODE to runtime.cfg
	* fileio.c:
	  Added check for IX,SQ,RL,LS,LA_OPTIONS env var for file 
	  I/O options when IO_fdname is not defined.