@@ -357,6 +357,13 @@
 #          Default:  0 
 #          Example:  retry_seconds = 6
 
+# Environment name:  COB_KEYCHECK
+#   Parameter name:  keycheck
+#          Purpose:  Must INDEXED file keys match COBOL SELECT exactly
+#             Type:  boolean
+#          Default:  true
+#          Example:  keycheck = off
+
 # Environment name:  COB_SYNC
 #   Parameter name:  sync
 #          Purpose:  Should the file be synced to disk after each write/update
